dashboardLeft changes: changed from flex to grid added grid area for images fixed grid layout for dashbaord text on top that fixes spacing for the imgs

--- a/style.css
+++ b/style.css
@@ -14,15 +14,32 @@
 }
 
 #dashboardLeft {
-    display: flex;
+    display: grid;
     flex-direction: column;
     background-color: rgb(77, 188, 188);
-    grid-area: 1/1/3/1;
+    grid-area: 1/1/3/2;
     color:white;
+    grid-template-columns: 0.1fr 1fr;
+    grid-template-rows: 0.21fr 1fr;
     /* height: 100%;
     overflow: hidden;
     position: relative; */
 
+}
+
+#dashboardTxt {
+    grid-area: 1/1/3/3;
+}
+#dashImages {
+    grid-area: 2/1;
+    display: grid;
+    grid-template-rows: repeat(9, 0.05fr);
+}
+
+#dashTxt {
+    grid-area: 2/2;
+    display: grid;
+    grid-template-rows: repeat(9, 0.05fr);
 }
 
 #dashboardLeft button {
@@ -31,7 +48,7 @@
     padding: 20px;
     text-align: left;
     font-weight: bold;
-    font-size: 1.8em;
+    font-size: 1.5em;
     color: white;
 }
 
